00_introduction/python2.log
bob@acer-6930g:~$ vim a.py
bob@acer-6930g:~$ cat a.py 
a = range(10):
for i in a:
    print i
print "Not break!"
bob@acer-6930g:~$ python a.py 
  File "a.py", line 1
    a = range(10):
                 ^
SyntaxError: invalid syntax
bob@acer-6930g:~$ vim a.py
bob@acer-6930g:~$ cat a.py 
a = range(10)
for i in a:
    print i
print "Not break!"
bob@acer-6930g:~$ vim a.py
bob@acer-6930g:~$ python a.py 
0
1
2
3
4
5
6
7
8
9
Not break!
bob@acer-6930g:~$
